--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,17 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+}
+.menu span {
+	display: inline-block;
+	border: 1px solid black;
+	cursor: pointer;
+	padding: 10px 20px;
+	margin: 10px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
